app/src/main/java/test/breaking/bad/CharactersResponse.kt
package test.breaking.bad


class CharactersResponse : ArrayList<CharactersResponseItem>()